# fast-todo

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_todo/: app.py  database.py  models.py  schema.py  schemas.py  security.py  settings.py
fast_todo/routers/: auth.py  todos.py  users.py
fast_zero/: app.py
migrations/: env.py
migrations/versions/: 71bfea98db2b_create_todos_table.py  7c2f73b28d63_create_user_table.py  e1e340cc9c68_add_created_at_colum_for_todo_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
